--- a/infrastructure/config-repo/gateway-service.yml
+++ b/infrastructure/config-repo/gateway-service.yml
@@ -1,7 +1,9 @@
 server:
-  port: 8080
+  port: 8089
 
 spring:
+  main:
+    web-application-type: reactive
   cloud:
     gateway:
       discovery:
@@ -32,15 +34,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-  instance:
-    prefer-ip-address: true
+    instance:
+      prefer-ip-address: true
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,gateway
-
+0
 resilience4j:
   circuitbreaker:
     instances:
