--- a/infrastructure/config-server/pom.xml
+++ b/infrastructure/config-server/pom.xml
@@ -8,6 +8,7 @@
         <groupId>com.microservices</groupId>
         <artifactId>microservices-template</artifactId>
         <version>1.0.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>config-server</artifactId>
