--- a/infrastructure/log-service/pom.xml
+++ b/infrastructure/log-service/pom.xml
@@ -8,6 +8,7 @@
         <groupId>com.microservices</groupId>
         <artifactId>microservices-template</artifactId>
         <version>1.0.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>log-service</artifactId>
@@ -15,6 +16,11 @@
     <description>Centralized Logging Microservice</description>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
