--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.microservices</groupId>
@@ -11,65 +9,66 @@
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
+    <name>Microservices Template</name>
+    <description>POM padre para microservicios Spring Boot 3.x</description>
+
     <properties>
         <java.version>17</java.version>
-        <spring.boot.version>3.3.5</spring.boot.version>
-        <spring.cloud.version>2023.0.5</spring.cloud.version>
-        <logback.version>1.5.21</logback.version>
+        <spring-boot.version>3.5.0</spring-boot.version>
+        <spring-cloud.version>2025.0.0</spring-cloud.version>
+        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
     </properties>
 
     <modules>
-        <module>infrastructure/eureka-server</module>
         <module>infrastructure/config-server</module>
+        <module>infrastructure/eureka-server</module>
         <module>infrastructure/gateway-service</module>
         <module>infrastructure/log-service</module>
-        <module>services/cart-service</module>
         <module>services/catalog-service</module>
+        <module>services/cart-service</module>
     </modules>
-
-    <!-- ================= DEPENDENCY MANAGEMENT ================= -->
     <dependencyManagement>
         <dependencies>
-
-            <!-- SPRING BOOT BOM -->
+            <!-- Spring Boot BOM -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.boot.version}</version>
+                <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
 
-            <!-- SPRING CLOUD BOM (OBLIGATORIO) -->
+            <!-- Spring Cloud BOM -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-            <!-- Forzar logback sin vulnerabilidades -->
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
-
         </dependencies>
     </dependencyManagement>
 
-    <!-- ================= PLUGINS ================= -->
     <build>
         <pluginManagement>
             <plugins>
+                <!-- Plugin para compilar con Java 17 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.plugin.version}</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                    </configuration>
+                </plugin>
+
+                <!-- Spring Boot Maven Plugin -->
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring.boot.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
