--- a/services/cart-service/pom.xml
+++ b/services/cart-service/pom.xml
@@ -8,12 +8,17 @@
         <groupId>com.microservices</groupId>
         <artifactId>microservices-template</artifactId>
         <version>1.0.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>cart-service</artifactId>
     <name>Cart Service</name>
     <description>Shopping Cart Microservice</description>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
