--- a/services/catalog-service/src/main/resources/application.yml
+++ b/services/catalog-service/src/main/resources/application.yml
@@ -2,7 +2,4 @@ spring:
   application:
     name: catalog-service
     config:
-      import:
-        optional:
-          configserver:
-            http://config-server:8888
+      import: optional:configserver:http://localhost:8888
