--- a/infrastructure/config-repo/user-service.yml
+++ b/infrastructure/config-repo/user-service.yml
@@ -2,21 +2,21 @@ server:
   port: 0
 
 spring:
-  application:
-    name: cart-service
   datasource:
-    url: jdbc:h2:mem:userdb
+    url: jdbc:h2:mem:userdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
     driverClassName: org.h2.Driver
     username: sa
-    password: password
+    password:
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-  h2:
-    console:
-      enabled: true
+      ddl-auto: update
+    show-sql: false
+security:
+  jwt:
+    secret: huhgsth898hrfroijjjjjjjjjjjjjjfdspoijfpasjfdifjsif_TODO_CHANGE
+    expiration-ms: 3600000
+
+
 
 eureka:
   client:
@@ -25,14 +25,6 @@ eureka:
   instance:
     prefer-ip-address: true
 
-
-# Feign client configuration
-feign:
-  client:
-    config:
-      catalog-service:
-        connect-timeout: 5000
-        read-timeout: 5000
 
 logging:
   level:
