--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -1,17 +1,5 @@
-server:
-  port: 8083
 spring:
-  datasource:
-    url: jdbc:h2:mem:userdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-security:
-  jwt:
-    secret: changeit_changeit_changeit_changeit_changeit
-    expiration-ms: 3600000
-
+  application:
+    name: user-service
+    config:
+      import: optional:configserver:http://localhost:8888
