--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>services/catalog-service</module>
         <module>services/cart-service</module>
         <module>services/user-service</module>
+        <module>core</module>
     </modules>
     <dependencyManagement>
         <dependencies>
