--- a/services/cart-service/pom.xml
+++ b/services/cart-service/pom.xml
@@ -73,7 +73,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
         <!-- MapStruct -->
@@ -89,6 +88,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.6.3</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.microservices</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
