--- a/services/catalog-service/pom.xml
+++ b/services/catalog-service/pom.xml
@@ -69,7 +69,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
 
@@ -91,6 +90,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.microservices</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
