--- a/services/user-service/pom.xml
+++ b/services/user-service/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>3.2.0</spring.boot.version>
-        <mapstruct.version>1.5.5</mapstruct.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
         <jjwt.version>0.11.5</jjwt.version>
     </properties>
 
@@ -70,6 +70,12 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microservices</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
